# qrcode-project

./: .gitignore  qr-basis.psd  quellen.md  readme.md
psd/: qrcode.psd
python/: readme.md
python/src/: matrixHelper.py  matrixStore.py  pyproject.toml  qrcode.py
res/: testmode_qr-matrix.npy
rust/: Cargo.toml  readme.md
rust/src/: main.rs  matrix_store.rs  qrcode_verification.rs
src/: baseChecks.py  matrixHelper.py  matrixStore.py  pyproject.toml  qrcode.py
