[tool.poetry]
name = "qrcode-project"
version = "0.1.0"
description = ""
authors = ["Dersim Özdag <kontakt@dersimoezdag.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
numpy = "^1.26.4"
pyzbar = "^0.1.9"
opencv-python = "^4.9.0.80"
matplotlib="^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
